# Polka-Space

./: .gitignore  BLOCKCHAIN_INTEGRATION.md  Cargo.toml  README.md  index.html  lib.rs  package-lock.json  package.json  tailwind.config.ts
backend/: .env  package-lock.json  package.json  tsconfig.json
backend/src/: polkadotService.ts  server.ts
contracts/: UniqueNetworkNFT.rs
contracts/evm/: VRGenesisNFT.sol
contracts/minimal_nft/minimal_nft/: Cargo.toml  lib.rs
contracts/substrate/: AssetHubNFT.rs
contracts/substrate/AssetHubNFT/: Cargo.toml
contracts/substrate/AssetHubNFT/src/: lib.rs
contracts/substrate/AssetHubNFT_new/: Cargo.toml  lib.rs
contracts/substrate/asset_hub_nft_final/: Cargo.toml
contracts/substrate/temp_test/: Cargo.toml  lib.rs
src/: App.tsx  index.css  main.tsx
src/components/: ReadyPlayerMeAvatar.tsx
src/components/layout/: Sidebar.tsx
src/components/vr/: CrossChainGallery.tsx  Model.tsx  NFTGallery.tsx  ObjectControls.tsx  Phase3Launcher.tsx  VRExplorer.tsx  VRScene.tsx  VirtualLandPlots.tsx
src/components/wallet/: WalletConnect.tsx
src/config/: blockchainConfig.ts
src/contexts/: AvatarContext.tsx  WalletContext.tsx
src/hooks/: use-user-profile.ts
src/pages/: Documentation.tsx  Index.tsx  VRWorld.tsx
src/services/: analyticsService.ts  blockchainService.ts  ipfsService.ts  ipfsUploader.ts  mintingService.ts  xcmService.ts
src/stores/: objectStore.ts
