[package]
name = "asset_hub_nft"
version = "0.1.0"
authors = ["VR Genesis Frame Team"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
ink_primitives = { version = "4.3.0", default-features = false }
ink_metadata = { version = "4.3.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "4.3.0", default-features = false }
ink_storage = { version = "4.3.0", default-features = false }
ink_prelude = { version = "4.3.0", default-features = false }
scale = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.10.0", default-features = false, features = ["derive"], optional = true }

[lib]
name = "asset_hub_nft"
path = "src/lib.rs"
crate-type = [
    "cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = [] 